# gyne-agent

./: .env.example  .gitignore  Cargo.toml  README.md
consumer/: Cargo.toml
consumer/src/: main.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
publisher/: Cargo.toml
publisher/src/: main.rs
task-core/: Cargo.toml
task-core/src/: lib.rs
