[package]
name = "consumer"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
redis.workspace = true
reqwest.workspace = true
serde_json.workspace = true
task-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
